--- a/HideAndSeek/HideAndSeek.csproj
+++ b/HideAndSeek/HideAndSeek.csproj
@@ -54,6 +54,13 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Option.cs" />
+    <Compile Include="OptionDlg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OptionDlg.Designer.cs">
+      <DependentUpon>OptionDlg.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
@@ -72,6 +79,9 @@
     <Compile Include="WinPcap.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OptionDlg.resx">
+      <DependentUpon>OptionDlg.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
